# panproto

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  grammars.toml
crates/git-remote-cospan/: Cargo.toml  README.md
crates/git-remote-cospan/src/: main.rs
crates/panproto-check/: Cargo.toml  README.md
crates/panproto-check/src/: classify.rs  diff.rs  error.rs  lib.rs  report.rs
crates/panproto-cli/: Cargo.toml  README.md
crates/panproto-cli/src/: format.rs  main.rs
crates/panproto-cli/src/cmd/: branch.rs  convert.rs  data.rs  enrich.rs  expr.rs  git_bridge.rs  helpers.rs  history.rs  lens.rs  migrate.rs  (+4 more)
crates/panproto-cli/tests/: cli_workflows.rs
crates/panproto-core/: Cargo.toml  README.md
crates/panproto-core/src/: lib.rs
crates/panproto-expr/: Cargo.toml  README.md
crates/panproto-expr-parser/: Cargo.toml  README.md
crates/panproto-expr-parser/src/: lexer.rs  lib.rs  parser.rs  pretty.rs  token.rs
crates/panproto-expr/benches/: expr_bench.rs
crates/panproto-expr/src/: builtin.rs  env.rs  error.rs  eval.rs  expr.rs  lib.rs  literal.rs  subst.rs  typecheck.rs
crates/panproto-gat/: Cargo.toml  README.md
crates/panproto-gat/benches/: gat_bench.rs
crates/panproto-gat/src/: alg_struct.rs  check_model.rs  colimit.rs  composition.rs  eq.rs  error.rs  factorize.rs  free_model.rs  ident.rs  lib.rs  model.rs  morphism.rs  nat_transform.rs  op.rs  pullback.rs  quotient.rs  refinement.rs  schema_functor.rs  sort.rs  theory.rs  typecheck.rs  witness.rs
crates/panproto-git/: Cargo.toml  README.md
crates/panproto-git/src/: error.rs  export.rs  import.rs  lib.rs  tests.rs
crates/panproto-inst/: Cargo.toml  README.md
crates/panproto-inst/benches/: inst_bench.rs
crates/panproto-inst/src/: acset.rs  contraction.rs  edit_error.rs  error.rs  fan.rs  functor.rs  ginstance.rs  hom.rs  instance.rs  instance_env.rs  lib.rs  metadata.rs  parse.rs  pi.rs  poly.rs  provenance.rs  query.rs  reachability.rs  table_edit.rs  tree_edit.rs  validate.rs  value.rs  wtype.rs
crates/panproto-inst/tests/: integration.rs
crates/panproto-io/: Cargo.toml  README.md
crates/panproto-io/benches/: io_bench.rs
crates/panproto-io/src/: arena.rs  cst_extract.rs  error.rs  json_codec.rs  json_pathway.rs  lib.rs  registry.rs  tabular_codec.rs  tabular_pathway.rs  traits.rs  unified_codec.rs  xml_codec.rs  xml_pathway.rs
crates/panproto-io/tests/: roundtrip.rs
crates/panproto-jit/: Cargo.toml  README.md
crates/panproto-jit/src/: codegen.rs  error.rs  lib.rs  mapping.rs
crates/panproto-lens/: Cargo.toml  README.md
crates/panproto-lens-dsl/: Cargo.toml  README.md
crates/panproto-lens-dsl/contracts/: lens.ncl
crates/panproto-lens-dsl/src/: compile.rs  compose.rs  document.rs  error.rs  eval.rs  lib.rs  rules.rs  steps.rs
crates/panproto-lens/benches/: lens_bench.rs
crates/panproto-lens/src/: asymmetric.rs  auto_lens.rs  combinators.rs  complement_type.rs  compose.rs  cost.rs  diff_to_protolens.rs  edit_error.rs  edit_laws.rs  edit_lens.rs  edit_pipeline.rs  edit_provenance.rs  error.rs  fibration.rs  graph.rs  hint.rs  laws.rs  lib.rs  optic.rs  protolens.rs  symbolic.rs  symmetric.rs
crates/panproto-llvm/: Cargo.toml  README.md
crates/panproto-llvm/src/: error.rs  lib.rs  lowering.rs  parse_ir.rs  protocol.rs
crates/panproto-mig/: Cargo.toml  README.md
crates/panproto-mig/benches/: mig_bench.rs
crates/panproto-mig/src/: cascade.rs  chase.rs  compile.rs  compose.rs  coverage.rs  error.rs  existence.rs  hom_search.rs  invert.rs  lib.rs  lift.rs  migration.rs  overlap.rs
crates/panproto-parse/: Cargo.toml  README.md
crates/panproto-parse/src/: error.rs  id_scheme.rs  lib.rs  registry.rs  theory_extract.rs  walker.rs
crates/panproto-project/: Cargo.toml  README.md
crates/panproto-project/src/: cache.rs  config.rs  detect.rs  error.rs  lib.rs  resolve.rs
crates/panproto-protocols/: Cargo.toml  README.md
crates/panproto-protocols/src/: atproto.rs  emit.rs  error.rs  graphql.rs  json_schema.rs  lib.rs  protobuf.rs  raw_file.rs  sql.rs  theories.rs
crates/panproto-py/: Cargo.toml  README.md  pyproject.toml
crates/panproto-py/src/: check.rs  convert.rs  error.rs  expr.rs  gat.rs  git.rs  inst.rs  io.rs  lens.rs  lib.rs  mig.rs  parse.rs  project.rs  protocols.rs  schema.rs  vcs.rs
crates/panproto-schema/: Cargo.toml  README.md
crates/panproto-schema/src/: builder.rs  colimit.rs  error.rs  lib.rs  morphism.rs  normalize.rs  protocol.rs  schema.rs  serde_helpers.rs  validate.rs
crates/panproto-vcs/: Cargo.toml  README.md
crates/panproto-vcs/src/: auto_mig.rs  bisect.rs  blame.rs  cherry_pick.rs  dag.rs  data_mig.rs  edit_mig.rs  error.rs  expr.rs  fs_store.rs  gat_validate.rs  gc.rs  hash.rs  index.rs  lib.rs  mem_store.rs  merge.rs  object.rs  rebase.rs  refs.rs  rename_detect.rs  repo.rs  reset.rs  stash.rs  status.rs  store.rs
crates/panproto-vcs/tests/: auto_migration.rs  gat_workflows.rs  vcs_e2e.rs  workflows.rs
crates/panproto-wasm/: Cargo.toml  README.md
crates/panproto-wasm/src/: api.rs  error.rs  lib.rs  slab.rs
crates/panproto-xrpc/: Cargo.toml  README.md
crates/panproto-xrpc/src/: client.rs  error.rs  lib.rs
sdk/python/: README.md  mkdocs.yml  pyproject.toml
sdk/python/docs/: api.md  expressions.md  gat.md  index.md  io.md  lenses.md  migrations.md  schemas.md  vcs.md
sdk/python/tests/: test_check.py  test_errors.py  test_gat.py  test_instance.py  test_io.py  test_lens.py  test_lens_wasm.py  test_msgpack.py  test_native.py  test_protocol.py  test_types.py  test_vcs.py
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: atproto_recursive.rs  atproto_roundtrip.rs  breaking_change.rs  cambria_subsumption.rs  category_laws.rs  combinators.rs  cql_subsumption.rs  cross_protocol.rs  custom_protocol.rs  enriched_theories.rs  expr_query_tests.rs  hypergraph_fan.rs  lens_laws.rs  performance.rs  relationaltext_integration.rs  scalar_field_transforms.rs  self_description.rs  sql_migration.rs  theory_composition.rs  wasm_boundary.rs
(+589 files in other folders)
