[workspace]
resolver = "3"
members = [
    "crates/panproto-gat",
    "crates/panproto-schema",
    "crates/panproto-inst",
    "crates/panproto-mig",
    "crates/panproto-lens",
    "crates/panproto-check",
    "crates/panproto-protocols",
    "crates/panproto-core",
    "crates/panproto-wasm",
    "crates/panproto-cli",
    "crates/panproto-io",
    "crates/panproto-vcs",
    "crates/panproto-expr",
    "crates/panproto-expr-parser",
    "crates/panproto-py",
    "crates/panproto-grammars",
    "crates/panproto-parse",
    "crates/panproto-project",
    "crates/panproto-git",
    "crates/panproto-llvm",
    "crates/panproto-xrpc",
    "crates/git-remote-cospan",
    "crates/panproto-jit",
    "tests/integration",
]

[workspace.package]
version = "0.21.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/panproto/panproto"
homepage = "https://github.com/panproto/panproto"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
rmp-serde = "1.3.1"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"

# Error handling
thiserror = "2.0.18"
miette = { version = "7.6.0", features = ["fancy"] }

# Collections & allocation
smallvec = { version = "2.0.0-alpha.12", features = ["serde"] }
rustc-hash = "2.1.1"
bumpalo = "3.20.2"

# WASM
wasm-bindgen = "0.2.114"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py313"] }
pythonize = "0.24"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Testing
proptest = "1.10.0"

# SIMD-accelerated parsing
simd-json = "0.14"
memchr = "2.7"

# Project manifest
toml = "0.8"
globset = "0.4"

# Hashing
blake3 = "1"

# Benchmarking
divan = "0.1.21"

# Tree-sitter parsing
tree-sitter = "0.25"

# Workspace crates
panproto-gat = { version = "0.21.0", path = "crates/panproto-gat" }
panproto-schema = { version = "0.21.0", path = "crates/panproto-schema" }
panproto-inst = { version = "0.21.0", path = "crates/panproto-inst" }
panproto-mig = { version = "0.21.0", path = "crates/panproto-mig" }
panproto-lens = { version = "0.21.0", path = "crates/panproto-lens" }
panproto-check = { version = "0.21.0", path = "crates/panproto-check" }
panproto-protocols = { version = "0.21.0", path = "crates/panproto-protocols" }
panproto-core = { version = "0.21.0", path = "crates/panproto-core" }
panproto-io = { version = "0.21.0", path = "crates/panproto-io" }
panproto-vcs = { version = "0.21.0", path = "crates/panproto-vcs" }
panproto-expr = { version = "0.21.0", path = "crates/panproto-expr" }
panproto-expr-parser = { version = "0.21.0", path = "crates/panproto-expr-parser" }
panproto-grammars = { version = "0.21.0", path = "crates/panproto-grammars" }
panproto-parse = { version = "0.21.0", path = "crates/panproto-parse" }
panproto-project = { version = "0.21.0", path = "crates/panproto-project" }
panproto-git = { version = "0.21.0", path = "crates/panproto-git" }
panproto-llvm = { version = "0.21.0", path = "crates/panproto-llvm", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Publish jobs to run
publish-jobs = ["homebrew"]
# Homebrew tap repository
tap = "panproto/homebrew-tap"
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs should only run on tag push
pr-run-mode = "skip"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# cargo-dist uses this profile for building release artifacts
[profile.dist]
inherits = "release"

[profile.release-wasm]
inherits = "release"
opt-level = 3
