[package]
name = "panproto-check"
description = "Breaking change detection for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-mig = { workspace = true }
panproto-lens = { workspace = true }
panproto-schema = { workspace = true }
panproto-gat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
