[package]
name = "panproto-cli"
description = "CLI tool for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "schema"
path = "src/main.rs"

[dependencies]
panproto-core = { workspace = true }
panproto-expr = { workspace = true }
panproto-expr-parser = { workspace = true }
panproto-parse = { workspace = true }
panproto-project = { workspace = true }
panproto-git = { workspace = true }
panproto-llvm = { workspace = true }
clap = { workspace = true }
git2 = "0.20"
panproto-xrpc = { version = "0.19.0", path = "../panproto-xrpc" }
panproto-vcs = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
panproto-core = { workspace = true }

[lints]
workspace = true
