[package]
name = "panproto-cli"
description = "Schematic version control CLI for panproto"
homepage = "https://github.com/panproto/panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# cargo-dist: this is the package that produces distributable binaries
[package.metadata.dist]
dist = true

[[bin]]
name = "schema"
path = "src/main.rs"

[dependencies]
panproto-core = { workspace = true }
panproto-expr = { workspace = true }
panproto-expr-parser = { workspace = true }
panproto-parse = { workspace = true }
panproto-project = { workspace = true }
panproto-git = { workspace = true }
panproto-llvm = { workspace = true }
clap = { workspace = true }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
panproto-xrpc = { version = "0.25.0", path = "../panproto-xrpc" }
panproto-vcs = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
panproto-core = { workspace = true }

[lints]
workspace = true
