[package]
name = "panproto-gat"
description = "GAT (Generalized Algebraic Theory) engine for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-expr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "gat_bench"
harness = false

[lints]
workspace = true
