[package]
name = "panproto-git"
description = "Bidirectional git ↔ panproto-vcs translation bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-gat = { workspace = true }
panproto-schema = { workspace = true }
panproto-protocols = { workspace = true }
panproto-parse = { workspace = true }
panproto-project = { workspace = true }
panproto-vcs = { workspace = true }

git2 = "0.20"

serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
