[package]
name = "panproto-inst"
description = "Instance representation for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-schema = { workspace = true }
panproto-gat = { workspace = true }
panproto-expr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "inst_bench"
harness = false

[lints]
workspace = true
