[package]
name = "panproto-parse"
description = "Tree-sitter full-AST parsers and emitters for panproto language protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-gat = { workspace = true }
panproto-schema = { workspace = true }
panproto-protocols = { workspace = true }
panproto-grammars = { workspace = true }

tree-sitter = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["panproto-grammars/default"]
group-core = ["panproto-grammars/group-core"]
group-web = ["panproto-grammars/group-web"]
group-systems = ["panproto-grammars/group-systems"]
group-jvm = ["panproto-grammars/group-jvm"]
group-scripting = ["panproto-grammars/group-scripting"]
group-data = ["panproto-grammars/group-data"]
group-functional = ["panproto-grammars/group-functional"]
group-devops = ["panproto-grammars/group-devops"]
group-mobile = ["panproto-grammars/group-mobile"]
group-all = ["panproto-grammars/group-all"]

[lints]
workspace = true
