[package]
name = "panproto-parse"
description = "Tree-sitter full-AST parsers and emitters for panproto language protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-gat = { workspace = true }
panproto-schema = { workspace = true }
panproto-protocols = { workspace = true }
panproto-grammars = { workspace = true, optional = true }

tree-sitter = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["grammars"]
grammars = ["dep:panproto-grammars", "panproto-grammars/default"]
group-core = ["grammars", "panproto-grammars/group-core"]
group-web = ["grammars", "panproto-grammars/group-web"]
group-systems = ["grammars", "panproto-grammars/group-systems"]
group-jvm = ["grammars", "panproto-grammars/group-jvm"]
group-scripting = ["grammars", "panproto-grammars/group-scripting"]
group-data = ["grammars", "panproto-grammars/group-data"]
group-functional = ["grammars", "panproto-grammars/group-functional"]
group-devops = ["grammars", "panproto-grammars/group-devops"]
group-mobile = ["grammars", "panproto-grammars/group-mobile"]
group-all = ["grammars", "panproto-grammars/group-all"]

[lints]
workspace = true
